# chat-gpt-cli

./: Cargo.toml  README.md  TODO.md  build-install.sh
src/: init.rs  main.rs  read_command.rs  send_message.rs  user_thread.rs
