[package]
name = "cgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colored = "2.0.0"
home = "0.5.9"
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
termimad = "0.31.1"
tokio = { version = "1", features = ["full"] }
